src/app.css
@import "tailwindcss";

:root {
  --background-rgb: 121, 113, 107;
  --foreground-rgb: 11, 10, 9;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-rgb: 11, 10, 9;
    --foreground-rgb: 121, 113, 107;
  }
}

body {
  background: rgb(var(--background-rgb));
  color: rgb(var(--foreground-rgb));
}

nav .active {
  color: white;
}

.diagram {
  height: 60vh;
}

canvas {
  position: absolute;
  top: 2.5rem;
  right: 0;
  z-index: 1;
}

.future-canvas {
  height: 50vh;
}

